--- a/src/app/help/help-search/help-search.component.scss
+++ b/src/app/help/help-search/help-search.component.scss
@@ -3,6 +3,10 @@
 @include danger-action;
 @include table-inline-buttons;
 @include listbox-zebra-rows;
+@include correct-search-criteria;
+@include correct-autocomplete;
+@include correct-file-upload;
+@include displaying-text-responsive;
 
 :host ::ng-deep {
   .p-datatable .p-sortable-column .p-sortable-column-icon {
